# gf180

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  install_tech.py  pyproject.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: pages.yml  release.yml  test_code.yml
docs/: _config.yml  _toc.yml  api.rst  cells.rst  changelog.md  components.rst  conf.py  deprecation_notice.md  index.md  tutorial.md  write_cells.py  write_components_doc.py
docs/_static/: redirect.js
docs/notebooks/: intro.py
gf180/: __init__.py  cap_mim.py  cap_mos.py  config.py  diode.py  fet.py  guardring.py  layers.py  layers.yaml  res.py  via_generator.py
gf180/cells/klayout/pymacros/: README.md
gf180/cells/klayout/pymacros/cells/: __init__.py  bjt.py  cap_mim.py  cap_mos.py  diode.py  draw_bjt.py  draw_cap_mim.py  draw_cap_mos.py  draw_diode.py  draw_efuse.py  draw_fet.py  draw_res.py  efuse.py  fet.py  res.py  via_generator.py
gf180/klayout/: grain.xml
gf180/klayout/tech/: gf180mcu.lyp
tests/: test_components.py  test_sample.py
tests/gds_ref/: alter_interdig.gds  alter_interdig_alter_in_28fe9508.gds  alter_interdig_alter_in_a0369a3e.gds  cap_mim.gds  cap_mim_cap_mim_MOA_MLM_b0b43f27.gds  cap_mos.gds  cap_mos_cap_mos_Tcap_nm_eb99293d.gds  cap_mos_dev.gds  cap_mos_inst.gds  cap_mos_inst_cap_mos_in_3c75bb4a.gds  diode_dw2ps.gds  diode_dw2ps_diode_dw2ps_330c59d6.gds  diode_nd2ps.gds  diode_nd2ps_diode_nd2ps_c6e0fa40.gds  diode_nw2ps.gds  diode_nw2ps_diode_nw2ps_5009be19.gds  diode_pd2nw.gds  diode_pd2nw_diode_pd2nw_e0429b6a.gds  diode_pw2dw.gds  diode_pw2dw_diode_pw2dw_aa427385.gds  interdigit.gds  interdigit_interdigit_S_5897cf12.gds  labels_gen.gds  labels_gen_labels_gen_L_f6da3bfa.gds  nfet.gds  nfet_06v0_nvt.gds  nfet_06v0_nvt_nfet_06v0_eee0ad31.gds  nfet_deep_nwell_nfet_de_970c9e54.gds  nfet_nfet_LG0p28_WG0p22_a3e00d8b.gds  nplus_res.gds  nplus_res_nplus_res_LR0_bb44ab6e.gds  npolyf_res.gds  npolyf_res_npolyf_res_L_d0d74162.gds  pcmpgr_gen.gds  pcmpgr_gen_pcmpgr_gen_D_2b6266b6.gds  pfet.gds  pfet_deep_nwell.gds  pfet_deep_nwell_pfet_de_aa0915e5.gds  pfet_pfet_LG0p28_WG0p22_1dd61946.gds  plus_res_inst.gds  (+21 more)
tests/test_components/: test_pdk_settings_alter_interdig_.yml  test_pdk_settings_cap_mim_.yml  test_pdk_settings_cap_mos_.yml  test_pdk_settings_cap_mos_inst_.yml  test_pdk_settings_diode_dw2ps_.yml  test_pdk_settings_diode_nd2ps_.yml  test_pdk_settings_diode_nw2ps_.yml  test_pdk_settings_diode_pd2nw_.yml  test_pdk_settings_diode_pw2dw_.yml  test_pdk_settings_interdigit_.yml  test_pdk_settings_labels_gen_.yml  test_pdk_settings_nfet_.yml  test_pdk_settings_nfet_06v0_nvt_.yml  test_pdk_settings_nfet_deep_nwell_.yml  test_pdk_settings_nplus_res_.yml  test_pdk_settings_npolyf_res_.yml  test_pdk_settings_pcmpgr_gen_.yml  test_pdk_settings_pfet_.yml  test_pdk_settings_pfet_deep_nwell_.yml  test_pdk_settings_plus_res_inst_.yml  test_pdk_settings_polyf_res_inst_.yml  test_pdk_settings_pplus_res_.yml  test_pdk_settings_ppolyf_res_.yml  test_pdk_settings_ppolyf_u_high_Rs_res_.yml  test_pdk_settings_res_.yml  test_pdk_settings_sc_diode_.yml  test_pdk_settings_via_generator_.yml  test_pdk_settings_via_stack_.yml  test_pdk_settings_well_res_.yml
tests/test_components.gds/gds_ref/: cap_mos.gds  cap_mos_inst.gds  diode_dw2ps.gds  diode_nd2ps.gds  diode_nw2ps.gds  diode_pw2dw.gds  nfet.gds  nfet_06v0_nvt.gds  nfet_deep_nwell.gds  nplus_res.gds  npolyf_res.gds  pcmpgr_gen.gds  pfet_deep_nwell.gds  plus_res_inst.gds  polyf_res_inst.gds  pplus_res.gds  ppolyf_res.gds  ppolyf_u_high_Rs_res.gds  sc_diode.gds  sky_pfet_dev.gds  well_res.gds
